Show decoded QR code on display
Signed-off-by: Michal Banik <banik.michal.sk@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">bill-to-toshl</string>
+    <string name="qr_code_found">QR Code Found : %1$s</string>
 </resources>
